Update Create HTTP Function image

--- a/www/blog/2021-05-22.md
+++ b/www/blog/2021-05-22.md
@@ -74,9 +74,9 @@ Azure Static Web Apps has integrated API support provided by Azure Functions. In
 npm i -g azure-functions-core-tools@4 --unsafe-perm true
 ```
 
-Now, you can add an API route to your app by clicking the "Add HTTP Function..." button in the Azure Static Web Apps view.
+Now, you can add an API route to your app using the command palette (press `F1`) and searching "Create HTTP Function".
 
-![Add HTTP Function](https://dev-to-uploads.s3.amazonaws.com/uploads/articles/4d3gk3mmgla9xbkbyycp.png)
+![Add HTTP Function](https://user-images.githubusercontent.com/12476526/169424449-3a10a9a0-025f-4fa3-b15f-294846fb0291.png)
 
 Select a language (I chose JavaScript), then name your Function (I put "hello"). And then an API route will be created for you that you can make requests to at `/api/hello`.
 
