Week 3, Day 5 => Reviewed | Week 3, Day 7 => Ready

--- a/www/blog/2021-05-20.md
+++ b/www/blog/2021-05-20.md
@@ -3,7 +3,7 @@ slug: devtools-swacli-develop
 title: "#19: Develop with SWA CLI"
 authors: [yohan]
 tags: [swa, 30days, dev-tools]
-draft: true 
+draft: false
 ---
 
 <head>
@@ -20,8 +20,7 @@ draft: true
 
 Welcome to `Week 3, Day 5` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
-
+We're past the halfway mark in "Dev Tools" week! We looked at developer tools to help provision Azure resources, automate cross-browser testing, streamline CI/CD, and debug/audit your SWA for performance and accessibility. But what about **local development** - something to help me go from _start_ (project creation & configuration) to _finish_ (build & deploy) in **one tool**? Let's say hello to the [Azure Static Web Apps CLI](https://aka.ms/30DaysOfSWA/swa-cli).
 
 :::info What We'll Cover
  * `swa` - One command to rule them all!
