Twitter Card Image updated

--- a/www/blog/2021-05-20.md
+++ b/www/blog/2021-05-20.md
@@ -10,7 +10,7 @@ draft: false
   <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/devtools-swacli-develop" />
   <meta name="twitter:title" content="##19: Develop with SWA CLI" />
   <meta name="twitter:description" content="Join @sinedied on #30DaysOfSWA as debuts the new SWA CLI for @AzureStaticApps and walks through the build process!" />
-  <meta name="twitter:image" content="" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/19-banner-ecd588da06f9f1af0f0e8a5f3323aa20.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@nitya" />
   <meta name="twitter:site" content="@AzureStaticApps" /> 
