Video link added

--- a/www/blog/2021-05-20.md
+++ b/www/blog/2021-05-20.md
@@ -102,3 +102,9 @@ In the meantime, you can also head to [the new docs website](https://azure.githu
 We're also [here on dev.to](https://dev.to/azure/get-started-with-the-new-azure-static-web-apps-cli-mm3) to listen and help as much as we can! 🙂
 
 Please tell us your experience, your difficulties, your questions, and what features you would like to see in the next versions of the SWA CLI.
+
+## Resources
+
+Want to see the Static Web Apps CLI in action? The tool became generally available yesterday, launching at the [Azure Static Web Apps Anniversary](https://aka.ms/swaanniversary). Watch the segment to see the SWA CLI in action.
+
+<iframe width="560" height="315" frameborder="0"  src="https://www.youtube.com/embed/1e6k5HNK4F8" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
