--- a/www/blog/2021-05-27.md
+++ b/www/blog/2021-05-27.md
@@ -1,7 +1,7 @@
 ---
 slug: practices-byo-functions
-title: "#26: BYO Functions & SWA"
-authors: []
+title: "#26: Static Web Apps Power Feature - Link an Existing Azure Functions App"
+authors: [craig]
 tags: [swa, 30days, best-practices]
 draft: true 
 ---
@@ -10,12 +10,55 @@ Welcome to `Week 4, Day 5` of **#30DaysOfSWA**!!
 
 Yesterday we talked about .... Today we'll explore ...
 
-
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+* Use existing API endpoints with Static Web Apps
+* Switch from managed functions to “bring your own functions”
+* Get the benefit of the rich functionality of Azure Functions in your static web app
 
 ![](../static/img/series/banner.png)
+
+A power feature of Azure Static Web Apps is the ability to link an existing Functions app to your static web app.
+
+Using an existing Functions app allows you to avoid restrictions of [managed functions](https://docs.microsoft.com/azure/static-web-apps/apis). This means you can:
+
+*   Run functions in [any language](https://docs.microsoft.com/azure/azure-functions/functions-custom-handlers)
+*   Use [triggers and bindings](https://docs.microsoft.com/azure/azure-functions/functions-triggers-bindings?tabs=csharp)
+*   Implement [Durable Functions](https://docs.microsoft.com/azure/azure-functions/durable/durable-functions-overview?tabs=csharp)
+*   Use any other Azure Functions features
+
+Using an existing Functions app in Static Web Apps is easy - all your have to do is link the two apps together. Once you create the link, then a Functions app published under the following URL:
+
+```
+https://my-functions-app.azurewebsites.net/api/data
+```
+
+...is now also available under the `api` route in your static web app. 
+
+For instance:
+
+```
+https://red-sea-123.azurestaticapps.net/api/data
+```
+
+## Link an existing Functions app
+
+Linking an existing Functions app is a two step process. First you update the [staticwebapp.config.json](https://docs.microsoft.com/azure/static-web-apps/configuration) file, and then you link the apps via the Azure portal.
+
+### Update the configuration
+
+Open your site's `staticwebapp.config.json` file in an editor and make the following change:
+
+* Set the `api_location` value to an empty string (`""`)
+
+### Link apps in the Azure portal
+
+Next, navigate to your static web app in the Azure portal and make the following changes:
+
+* Click on **Functions** in the *Settings* menu
+* Click **Production** in the *Environment* dropdown
+* Click **Link to Function app** next to the *Functions type* dropdown
+* Select your subscription from the *Subscription* dropdown
+* Select your Functions app name from the *Function App* dropdown
+* Click the **Link** button
+
+Now your Functions app is linked to your website and is available under the `api` route!
