Using preset vs. plugin

--- a/www/blog/2021-05-27.md
+++ b/www/blog/2021-05-27.md
@@ -1,6 +1,6 @@
 ---
 slug: practices-byo-functions
-title: "#26: Static Web Apps Power Feature - Link an Existing Azure Functions App"
+title: "#26: Azure Functions & SWA"
 authors: [craig]
 tags: [swa, 30days, best-practices]
 draft: true 
@@ -9,11 +9,13 @@ draft: true
 Welcome to `Week 4, Day 5` of **#30DaysOfSWA**!! 
 
 Yesterday we talked about .... Today we'll explore ...
+Static Web Apps Power Feature - Link an Existing Azure Functions App
+
 
 ## What We'll Cover
 * Use existing API endpoints with Static Web Apps
 * Switch from managed functions to “bring your own functions”
-* Get the benefit of the rich functionality of Azure Functions in your static web app
+* Benefit from rich Azure Functions functionality in SWA
 
 ![](../static/img/series/banner.png)
 
