Week 3, Day 6 => Reviewed

--- a/www/blog/2021-05-21.md
+++ b/www/blog/2021-05-21.md
@@ -3,7 +3,7 @@ slug: devtools-swacli-deploy
 title: "#20: Deploy with SWA CLI"
 authors: [wassim, yohan]
 tags: [swa, 30days, dev-tools]
-draft: true 
+draft: false
 ---
 
 <head>
@@ -31,7 +31,7 @@ Today, we'll explore the `swa login` and `swa deploy` commands that help with de
  * **Exercise**: Use the new `swa` CLI to authenticate, and deploy your app
 :::
 
-![](../static/img/series/banner.png)
+![](../static/img/series/20-banner.png)
 
 
 For this second article about the SWA CLI, we'll talk about the new deployment options. And yes, you can now deploy your apps straight from the command line! Who's better than the person who implemented it to talk about it? I'll let my friend [Wassim](https://twitter.com/manekinekko) explain it all to you.
