Week 3, Day 7 => Reviewed
And added a Week 3 summary with setup for Week 4.

--- a/www/blog/2021-05-22.md
+++ b/www/blog/2021-05-22.md
@@ -3,7 +3,7 @@ slug: devtools-vscode
 title: "#21: Develop With VSCode"
 authors: [alex]
 tags: [swa, 30days, dev-tools]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 3, Day 7` of **#30DaysOfSWA**!! 
@@ -110,8 +110,26 @@ Now that you got your static web app running locally, you can [deploy your stati
 
 If you're having issues, please check out the [troubleshooting section in our wiki](https://github.com/microsoft/vscode-azurestaticwebapps/wiki/Guide:-Debugging-a-Static-Web-App-with-VS-Code#troubleshooting-).
 
-## Links + Resources 🔗
+## Resources 🔗
 
 * [Azure Static Web Apps documentation](https://docs.microsoft.com/en-us/azure/static-web-apps/)
 * [Azure Static Web Apps CLI](https://github.com/Azure/static-web-apps-cli)
 * [Azure Static Web Apps extension for VS Code](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestaticwebapps)
+
+## Next Week
+
+This marks the end of Week 3 of #30DaysOfSWA, with a focus on `Developer Tools`. Want a visual recap of what we covered .. here you go!! To recap:
+ * We provisioned Azure resources - using the Azure Portal and Azure CLI
+ * We added automated, cross-browser, e2e testing - using Playwright
+ * We built multi-stage deployment pipelines - using Azure DevOps
+ * We debugged and audited perf & accessibility - using Edge DevTools on VSCode
+ * We got unified local development and cloud deployment - using SWA CLI
+ * We explored rich extensions and seamless CLI interactions - using VS Code
+
+![Week 3 Visual Roadmap](../static/img/series/week3-roadmap.png)
+
+So what do we have planned for next week? 
+
+We've already covered core concepts, usage examples and developer tools -- so that leaves: **Best Practices!** Join us for the final week of #30DaysOfSWA where we define the end-to-end developer experience, explore various Azure Service integrations to enhance your SWA, dive into a cool case study, and end with a `Tips & Tricks` series that brings you back full circle to development.
+
+Thanks for sticking with us on this journey!
