--- a/www/blog/2021-05-21.md
+++ b/www/blog/2021-05-21.md
@@ -8,7 +8,7 @@ draft: false
 
 <head>
   <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/devtools-swacli-deploy" />
-  <meta name="twitter:title" content="##19: Deploy with SWA CLI" />
+  <meta name="twitter:title" content="#20: Deploy with SWA CLI" />
   <meta name="twitter:description" content="Join @sinedied and @manekinekko on #30DaysOfSWA in part 2 of the intro to SWA CLI for @AzureStaticApps - focused on deployment!" />
   <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/20-banner-62cb7a9019981d88c514d8875b8547d9.png" />
   <meta name="twitter:card" content="summary_large_image" />
