--- a/www/blog/2021-05-22.md
+++ b/www/blog/2021-05-22.md
@@ -6,6 +6,19 @@ tags: [swa, 30days, dev-tools]
 draft: false
 ---
 
+
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/devtools-vscode" />
+  <meta name="twitter:title" content="#21: Debug with VS Code" />
+  <meta name="twitter:description" content="Join @alexweininger as we wrap DevTools week on #30DaysOfSWA with a look at seamless debugging using @code for @AzureStatic Apps!" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/21-banner-4c8833d85f3b63b56f65329fd492dcb5.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/devtools-vscode" />
+</head>
+
+
 Welcome to `Week 3, Day 7` of **#30DaysOfSWA**!! 
 
 This week has been all about the SWA developer tools. To conclude the week, we'll show how the [Azure Static Web Apps extension for VS Code](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestaticwebapps) can make using all of these awesome tools easier!
