--- a/www/blog/2021-05-23.md
+++ b/www/blog/2021-05-23.md
@@ -1,24 +1,28 @@
 ---
 slug: practices-e2e
 title: "#22: E2E Development & SWA"
-authors: [anfibiacreativa]
+authors: [natalia]
 tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
 Welcome to `Week 4, Day 1` of **#30DaysOfSWA**!! 
 
-Today we'll explore the importance of a great development experience and how can you improve yours, building and deploying your static web applications, in Azure Static Web Apps!
+This kickstarts our "Best Practices" week where we'll explore additional topics that help up deliver an enhanced or more optimal modern web application experience to our users. We'll start by looking at the End-to-End _developer experience (DX)_ - the importance of having a smooth and seamless DX to complement the UX (user experience), and best practices to improve yours by architecting your applications and integrating services in more effective ways. Let's dive in!
+
 
 
 ## What We'll Cover
  * What is an end-to-end developer experience (DX)?
- * What are the components of a development experience when building and deploying static web apps?
- * How to improve DX implementing best practices?
- * How to create an architecture matrix to guide our end-to-end development experience.
- * **Exercise: Try to reproduce the architecture seen below! Most of the integrations are available to the free tier! Show us how far you got!** 
+ * What are core DX components when building and deploying static web apps?
+ * How can we improve DX implementing best practices?
+ * How can we create an architecture matrix to guide our end-to-end development experience?
+ * **Exercise: Try to reproduce the architecture seen below!
 
 ![](../static/img/series/banner.png)
+
+
+Today we explore the importance of a great development experience and how can you improve yours, building and deploying your static web applications, in Azure Static Web Apps!
 
 I admit it took me some time to write this post. It would have been much easier for me to write about a specific topic with code examples and technical definitions, than describing what developer experience means to me.
 
@@ -30,13 +34,24 @@ It's impossible for me to do it in a way that feels relatable to everyone. I can
 
 ## Predictability
 
-Let me start by saying that in my personal life, when I think of memorable experiences, a lot of them have been the consequence of an impulse. A spontaneous act. In my personal life, I am not much of a planner. I am the kind of person that wakes up every Saturday morning and declares "We are going somewhere far away this weekend!". And my husband (who is all the contrary from me and needs a lot of structure!) will ask: "Ok, where do you wanna go? Have you booked a hotel? Do you know where we will have lunch?". And I would invariably respond: "I don't care! Let's just hop in the car, drive somewhere and figure it all out on the way there!". That's because I think that experimenting and experiencing, go hand in hand, when it comes to adventure. And the actual _way there_, is part of the fun.
+Let me start by saying that in my personal life, when I think of memorable experiences, a lot of them have been the consequence of an impulse. A spontaneous act. In my personal life, I am not much of a planner. I am the kind of person that wakes up every Saturday morning and declares "We are going somewhere far away this weekend!". And my husband (who is all the contrary from me and needs a lot of structure!) will ask questions like:
+ * Ok, where do you wanna go? 
+ * Have you booked a hotel? 
+ * Do you know where we will have lunch? 
+And I would invariably respond: "I don't care! Let's just hop in the car, drive somewhere and figure it all out on the way there!". That's because I think that experimenting and experiencing, go hand in hand, when it comes to adventure. And the actual _way there_, is part of the fun.
 
-> **At work, however, I like predictability. I like structure, repeatability, patterns and conventions. I appreciate having a framework, an opinion many agree with so I'm on the same page with my team. And I like all of that, because it oftentimes leads to quick results and success.**
+> **At work, however, I like predictability.** 
 
-## Experiences take you places....or not
+I like structure, repeatability, patterns and conventions. I appreciate having a framework, an opinion many agree with so I'm on the same page with my team. And I like all of that, because it oftentimes leads to quick results and success.**
 
-For me, development experiences are like roads. And like roads, they have milestones. And they have lanes. And they have ramps. And they should get you somewhere. 
+## Experiences are like roads
+
+Experiences can take you places .. or not. To me, that means development experiences are a lot like the roads we travel on:
+
+ * They have milestones, to measure progress.
+ * They have multiple lanes, for options.
+ * They have entry and exit ramps, for flexibility. 
+ * And they should get you somewhere (destination).
 
 Back when I started doing web development, there were a lot less types of roads. They were mostly linear and kind of slow, particularly when it came to frontend development. Those were the times when you needed a full roundtrip to the same server, over and over, to get anything new to render on a page. 
 
@@ -176,3 +191,7 @@ In order for developers to have a *great* experience they enjoy, from one end to
 - definitions and hooks for integration (with other technologies) or and migration (to other technologies)
 
 When all those, and some more, are fulfilled, developers become more productive, focused, and can spend their time doing what they love, instead of wasting it in undifferentiated tasks.
+
+
+## Exercise
+Try to reproduce the architecture seen above! Most of the integrations are available to the free tier! Show us how far you got!
