Week 4, Day 1 => Received

--- a/www/blog/2021-05-23.md
+++ b/www/blog/2021-05-23.md
@@ -8,21 +8,21 @@ draft: true
 
 Welcome to `Week 4, Day 1` of **#30DaysOfSWA**!! 
 
-This kickstarts our "Best Practices" week where we'll explore additional topics that help up deliver an enhanced or more optimal modern web application experience to our users. We'll start by looking at the End-to-End _developer experience (DX)_ - the importance of having a smooth and seamless DX to complement the UX (user experience), and best practices to improve yours by architecting your applications and integrating services in more effective ways. Let's dive in!
+This kickstarts our **"Best Practices"** week where we'll explore additional topics that help up deliver an enhanced or more optimal modern web application experience to our users. We'll start by looking at the End-to-End _developer experience (DX)_ - the importance of having a smooth and seamless DX to complement the UX (user experience), and best practices to improve your developer experience by architecting your applications and integrating services in more effective ways. Let's dive in!
 
-
-
-## What We'll Cover
+:::info What We'll Cover
  * What is an end-to-end developer experience (DX)?
  * What are core DX components when building and deploying static web apps?
  * How can we improve DX implementing best practices?
- * How can we create an architecture matrix to guide our end-to-end development experience?
- * **Exercise: Try to reproduce the architecture seen below!
+ * How can we create an architecture matrix to guide E2E DevEx?
+ * **Exercise**: Try to reproduce the architecture seen below!
+:::
+
 
 ![](../static/img/series/banner.png)
 
 
-Today we explore the importance of a great development experience and how can you improve yours, building and deploying your static web applications, in Azure Static Web Apps!
+Today we explore the importance of a great development experience and how can you improve yours, when building and deploying your static web applications using Azure Static Web Apps!
 
 I admit it took me some time to write this post. It would have been much easier for me to write about a specific topic with code examples and technical definitions, than describing what developer experience means to me.
 
@@ -38,15 +38,16 @@ Let me start by saying that in my personal life, when I think of memorable exper
  * Ok, where do you wanna go? 
  * Have you booked a hotel? 
  * Do you know where we will have lunch? 
+
 And I would invariably respond: "I don't care! Let's just hop in the car, drive somewhere and figure it all out on the way there!". That's because I think that experimenting and experiencing, go hand in hand, when it comes to adventure. And the actual _way there_, is part of the fun.
 
 > **At work, however, I like predictability.** 
 
-I like structure, repeatability, patterns and conventions. I appreciate having a framework, an opinion many agree with so I'm on the same page with my team. And I like all of that, because it oftentimes leads to quick results and success.**
+I like structure, repeatability, patterns & conventions. I appreciate having a framework, an opinion many agree with so I'm on the same page with my team. And I like all of that, because it oftentimes leads to quick results and success.
 
 ## Experiences are like roads
 
-Experiences can take you places .. or not. To me, that means development experiences are a lot like the roads we travel on:
+Experiences can take you places .. or not. To me, that means **development experiences are a lot like the roads we travel on**:
 
  * They have milestones, to measure progress.
  * They have multiple lanes, for options.
@@ -57,21 +58,23 @@ Back when I started doing web development, there were a lot less types of roads.
 
 ![the roundtrip road of boring development](../static/img/series/w4d1/swaF1.png)
 
-Now we're speeding on a multilane freeway with lots of twists and turns, lots of roads that interconnect, and lots of possiblities ([aka configurations](https://dev.to/azure/04-configuring-static-web-apps-2oa7)). Basically, to go somewhere, you may have to use ramps to connect two different roads, for example, to connect different services [via an API](https://dev.to/azure/03-api-enabling-static-web-apps-25kh). 
+Now we're speeding on a multilane freeway with many twists and turns, interconnecting roads, and numerous possiblities ([aka configurations](https://dev.to/azure/04-configuring-static-web-apps-2oa7)). To get to your destination, you may have to use ramps to connect two different roads -- similar to how we connect different services [via an API](https://dev.to/azure/03-api-enabling-static-web-apps-25kh). 
 
 ![more lanes, more connectivity, more fun, more speed](../static/img/series/w4d1/swaF3.png)
 
-If we were going to continue to elaborate on this analogy, a bad development experience is like a bad roadmap design:
+If we were going to continue to elaborate on this analogy, **a bad development experience is like a bad roadmap design**:
 
 - the road is old, bumpy, cracked
-- signposts are not enough or appear too close to a detour so you don't have enough time to follow instructions
-- if you miss an exit, you may have to travel long until you have the opportunity to turn around
-- there may be no way to access a road from another one, no ramp at all!
+- insufficient signposts, or appearing close enough to a detour that don't have enough time to follow instructions
+- if you miss an exit, you may have to travel a long distance before you have the opportunity to turn around
+- there may be no way to access a desired road from another one - no exit or entry ramps at all!
 - if your car breaks or you're out of fuel or energy, there may not be service stations at all along the way, to refill or plug-in
 - or if you find a station there are no signs that indicate how much the gallon or kwh costs, before you take the exit to hit it
 - there may not be any way to get food or drinks for many miles
 
-If you're driver, and a developer reading this list, you probably can guess what each one of those hypothetical ingredients to a bad riding experience, map to. But let me be explicit:
+If you're driver, and a developer reading this list, you probably can guess what each one of those hypothetical ingredients to a bad riding experience, map to. 
+
+But let me be explicit:
 
 - having to slow down due to infrastructure conditions
 - feeling like you're not making any progress
@@ -83,9 +86,13 @@ If you're driver, and a developer reading this list, you probably can guess what
 - not being able to scale or not being sure how much it will cost you
 - not having fun, as you go
 
-Because, let's face it: developing should be a fun experience. And for that you need the right vehicle, the right infrastructure, and a plan. _And when you lack all that, it's like riding a Lamborghini across a sandy desert._
+**Because, let's face it: developing should be a fun experience.** 
 
-> **And so, we can conclude that developer experience refers to the all in all physical, emotional and cognitive undergoing of an individual while using a tool or technology to complete a software development task. And it can equate to suffering, when it's bad, to enduring, when fustrating or neutral, or to feeling pleasure and delight, when great.**
+And for that you need the right vehicle, the right infrastructure, and a plan. _And when you lack all that, it's like riding a Lamborghini across a sandy desert._
+
+:::info WHAT WE CAN CONCLUDE
+Is that developer experience refers to the entirety of physical, emotional and cognitive experiences of an individual while using a tool or technology to complete a software development task. It can equate to suffering (when bad), enduring (when fustrating or neutral), or to feeling pleasure and delight (when great).
+:::
 
 ![The right infrastructure, capabilities and resources, to support the right architecture](../static/img/series/w4d1/swaF4.png)
 
@@ -153,14 +160,14 @@ The matrix will be roughly based on the high-level diagram below:
 |As a developer, I want to use the tools I am familiar with, to code, build and deploy my Jamstack (Statically Generated) applications| VS Code / SWA CLI | Setup | As an end-user, I want to be able to access an online catalogue of products with their respective detail pages |
 |As a developer, I want to connect my remote repository where I collaborate with other team members, to the service I will be deploying my app to | GitHub / VS Code / Static Web Apps* | Setup | As a business owner, I want the code and secrets for my e-commerce platform to be stored safely |
 |As a developer, I want to setup a CI/CD pipeline, for remote collaboration and fast/agile integration |  GitHub Actions Static Web Apps | Setup | As a content author, I want to see the new content published when I submit it to the content authoring tool, without any additional manual work |
-|As a developer, I want to integrate with a database to store content and assets | CosmosDB*† / Azure Functions*† / Static Web Apps* | Implementation/Integration | As a business owner I want all assets and information to stored safely and versioned |
-|As a developer, I want to integrate with a (headless) CMS for 3rd party content authoring | Azure Functions*† / Static Web Apps* | Implementation/Integration | As a content author, I want to see the new content published when I submit it to the content authoring tool |
+|As a developer, I want to integrate with a database to store content and assets | CosmosDB*† / Azure Functions*† / Static Web Apps* | Implementation or Integration | As a business owner I want all assets and information to stored safely and versioned |
+|As a developer, I want to integrate with a (headless) CMS for 3rd party content authoring | Azure Functions*† / Static Web Apps* |Implementation or Integration | As a content author, I want to see the new content published when I submit it to the content authoring tool |
 |As a developer, I want to trigger the CI/CD workflows via custom/scheduled events | GitHub Actions* / Durable Functions** | Integration | As a business owner, I want my teams to automate the process of building and deploying new code or content so we can achieve optimal time-to-value |
-|As a developer, I want to secure my implementation to make sure requests to our service come from my application | Indentity Platform† | Implementation/Integration | As a business owner, I want to make sure our e-commerce tool is secure and compliant with laws and regulations |
-|As a developer, I want to restrict access to certain pages to users with a certain role| Identity Platform† | Implementation/Integration | As an end user, I want to keep a private profile with my payment methods and other PII |
-|As a developer, I want to localize the UI to several different languages | Cognitive Services*† | Implementation/Integration | As an end user, I want to access content in my own language |
-|As a developer, I want to personalize recommendations in dynamic pages | Cognitive Services*† | Implementation/Integration | As an end user, I want to have recommendations that are relevant to me |
-|As a developer, I want to integrate with a 3rd party payment platform | _3rd party_ / Azure Functions* | Implementation/Integration | As a business owner, I want payments processed by a reliable 3rd party provider |
+|As a developer, I want to secure my implementation to make sure requests to our service come from my application | Indentity Platform† | Implementation or Integration | As a business owner, I want to make sure our e-commerce tool is secure and compliant with laws and regulations |
+|As a developer, I want to restrict access to certain pages to users with a certain role| Identity Platform† | Implementation or Integration | As an end user, I want to keep a private profile with my payment methods and other PII |
+|As a developer, I want to localize the UI to several different languages | Cognitive Services*† | Implementation or Integration | As an end user, I want to access content in my own language |
+|As a developer, I want to personalize recommendations in dynamic pages | Cognitive Services*† | Implementation or Integration | As an end user, I want to have recommendations that are relevant to me |
+|As a developer, I want to integrate with a 3rd party payment platform | _3rd party_ / Azure Functions* | Implementation or Integration | As a business owner, I want payments processed by a reliable 3rd party provider |
 |As a developer, I want to preview and debug changes before I promote them to production | Static Web Apps Preview/Edge Developer Tools | Build/Deploy/Testing | As a business owner, I want to preview changes before they go live |
 |As a developer, I want to reduce technical debt by implementing an e2e test automation suite | Playwright / GitHub Actions | Testing | As an end user, I want the user interface to respond quickly and accurately, when I interact with it |
 |As a developer, I want to be able to publish my application to the web | Static Web Apps | Build/Deploy | As a business owner, I want my application to be accessible by web users from all parts of the world, with the least possible latency |
