Week 4, Day 2 => Received

--- a/www/blog/2021-05-24.md
+++ b/www/blog/2021-05-24.md
@@ -17,9 +17,7 @@ Yesterday we talked about end-to-end developer experience. Today we'll explore a
  * What is a search index?
  * Add search to website
  * Deploy to SWA
- * **Exercise**: Upload data to search index
- * **Exercise**: Deploy sample to SWA 
- * **Resource(s):** 
+ * **Exercise**: Upload data to search index. Then deploy sample to SWA.
 
 ![](../static/img/series/banner.png)
 
