Week 4, Day 1 => Reviewed

--- a/www/blog/2021-05-13.md
+++ b/www/blog/2021-05-13.md
@@ -1,6 +1,6 @@
 ---
 slug: build-with-blazor
-title: "#12: Headless CMS & SWA With Blazor"
+title: "#12: Headless CMS & Blazor SWA"
 authors: [justin, jeff]
 tags: [swa, 30days, usage-examples, blazor]
 draft: false
