--- a/www/blog/2021-05-23.md
+++ b/www/blog/2021-05-23.md
@@ -3,7 +3,7 @@ slug: practices-e2e
 title: "#22: E2E Development & SWA"
 authors: [natalia]
 tags: [swa, 30days, best-practices]
-draft: true 
+draft: false
 ---
 
 Welcome to `Week 4, Day 1` of **#30DaysOfSWA**!! 
@@ -19,7 +19,7 @@ This kickstarts our **"Best Practices"** week where we'll explore additional top
 :::
 
 
-![](../static/img/series/banner.png)
+![](../static/img/series/22-banner.png)
 
 
 Today we explore the importance of a great development experience and how can you improve yours, when building and deploying your static web applications using Azure Static Web Apps!
@@ -43,38 +43,36 @@ And I would invariably respond: "I don't care! Let's just hop in the car, drive 
 
 > **At work, however, I like predictability.** 
 
-I like structure, repeatability, patterns & conventions. I appreciate having a framework, an opinion many agree with so I'm on the same page with my team. And I like all of that, because it oftentimes leads to quick results and success.
+I like structure, repeatability, patterns & conventions. I appreciate having a framework, an opinion others agree with so I'm on the same page with my team. And I like all this because it oftentimes leads to quick results and success.
 
-## Experiences are like roads
+## A Road Analogy
 
-Experiences can take you places .. or not. To me, that means **development experiences are a lot like the roads we travel on**:
+Experiences are like roads. They can take you places -- or not. And to me, **development experiences are just like the roads we travel on**:
 
- * They have milestones, to measure progress.
- * They have multiple lanes, for options.
- * They have entry and exit ramps, for flexibility. 
- * And they should get you somewhere (destination).
+ * They have milestones - so I can measure progress.
+ * They have multiple lanes - so I have flexibility.
+ * They have entry and exit ramps - so I can change paths quickly. 
+ * They have destinations - so I know I'm getting somwhere specific.
 
-Back when I started doing web development, there were a lot less types of roads. They were mostly linear and kind of slow, particularly when it came to frontend development. Those were the times when you needed a full roundtrip to the same server, over and over, to get anything new to render on a page. 
+When I first got into web development, there were a fewer types of roads. Most were linear and slow, particularly when it came to frontend development. You needed repeated round-trips to the same server, just to get something to render on a page.
 
 ![the roundtrip road of boring development](../static/img/series/w4d1/swaF1.png)
 
-Now we're speeding on a multilane freeway with many twists and turns, interconnecting roads, and numerous possiblities ([aka configurations](https://dev.to/azure/04-configuring-static-web-apps-2oa7)). To get to your destination, you may have to use ramps to connect two different roads -- similar to how we connect different services [via an API](https://dev.to/azure/03-api-enabling-static-web-apps-25kh). 
+By contrast, today we're speeding along multi-lane freeways with numerous twists and turns, interconnecting roads, and possibilities ([aka configurations](https://dev.to/azure/04-configuring-static-web-apps-2oa7)) to choose from. To reach a destination, you may have to use ramps to connect two different roads - similar to how we connect tow different services [via an API](https://dev.to/azure/03-api-enabling-static-web-apps-25kh). 
 
 ![more lanes, more connectivity, more fun, more speed](../static/img/series/w4d1/swaF3.png)
 
-If we were going to continue to elaborate on this analogy, **a bad development experience is like a bad roadmap design**:
+If we continue with this analogy, then **a bad development experience is like poor road planning or construction**:
 
 - the road is old, bumpy, cracked
-- insufficient signposts, or appearing close enough to a detour that don't have enough time to follow instructions
+- the signposts are few and far between, giving the user insufficient time to process and follow instructions. 
 - if you miss an exit, you may have to travel a long distance before you have the opportunity to turn around
 - there may be no way to access a desired road from another one - no exit or entry ramps at all!
-- if your car breaks or you're out of fuel or energy, there may not be service stations at all along the way, to refill or plug-in
-- or if you find a station there are no signs that indicate how much the gallon or kwh costs, before you take the exit to hit it
-- there may not be any way to get food or drinks for many miles
+- if your car breaks down, or your run out of fuel - there may not be service stations nearby to for refill or recharge.
+- or you may find a station, but you have no idea of the cost of refill or recharge before you commit to taking that exit.
+- there may not be any way to get food or drinks for many miles.
 
-If you're driver, and a developer reading this list, you probably can guess what each one of those hypothetical ingredients to a bad riding experience, map to. 
-
-But let me be explicit:
+You can probably guess how these travel constraints map onto poor developer experiences, but let's spell it out:
 
 - having to slow down due to infrastructure conditions
 - feeling like you're not making any progress
@@ -86,9 +84,8 @@ But let me be explicit:
 - not being able to scale or not being sure how much it will cost you
 - not having fun, as you go
 
-**Because, let's face it: developing should be a fun experience.** 
-
-And for that you need the right vehicle, the right infrastructure, and a plan. _And when you lack all that, it's like riding a Lamborghini across a sandy desert._
+**Because, let's face it: developing should be a fun experience. And for that you need the right vehicle, the right infrastructure, and a plan.** 
+And when you lack all that, it's like riding a Lamborghini across a sandy desert.
 
 :::info WHAT WE CAN CONCLUDE
 Is that developer experience refers to the entirety of physical, emotional and cognitive experiences of an individual while using a tool or technology to complete a software development task. It can equate to suffering (when bad), enduring (when fustrating or neutral), or to feeling pleasure and delight (when great).
@@ -98,16 +95,14 @@ Is that developer experience refers to the entirety of physical, emotional and c
 
 Making the right architecture and technology decisions, will definitely impact the outcome. And we can only make those decisions right, when we ask the right questions.
 
-## What are the right infrastructure, capabilities and resources, to support the right architecture?
+## Architecture: What core infrastructure, capabilities and resources do we need?
 
 As we hope you have learned from following this [30 days of Static Web Apps](https://dev.to/azure/kicking-off-30daysofswa-2d8g), it is a dedicated offering for frontend developers working with SPA's and Static Generated websites. We continue to work to extend its capabilities, and support more frameworks and use cases.
 
-### Fresh and relevant documentation to keep you in track
-
+### Documentation: Should be fresh & relevant!
 When thinking about those milestones that should hit along the road of a great end-to-end developer experience, we are working hard to make sure you always find complete and fresh documentation to help you get started and know all the possibilities you have with Static Web Apps, upfront, and to keep supporting you with relevant documentation and content as your applications grow.
 
-### All the building blocks and optimal integration flows for a smooth journey
-
+### Workflows: Building blocks & seamless integrations!
 Not only have we been working to offer an intuitive user interface at the Azure portal itself. We have been very intentional at the time of making sure integration with the [tools](https://dev.to/azure/15-develop-with-azure-tools-3h47), and platforms frontend developers know, use and love, like GitHub and VS Code, is seamless. 
 
 Static Web Apps automatically pushes a GitHub actions workflow file as you generate the application as a resource, and you can create it from the portal, if you prefer a UI guided experience, but also without ever leaving your favorite code editor, by installing the [official extension](https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-azurestaticwebapps)!
@@ -116,33 +111,41 @@ And if you prefer a command line experience, you can use the brand new Static We
 
 Creating your static web applications and configuring your pipelines, has never been this easy!
 
-### A speed booster and additional power with serverless functions and containerized APIs
+### Efficient & Versatile: Serverless + Containerized APIs
 
 Because we recognize that the use cases for Jamstack and JavaScript full-stacks applications in general are becoming more and more complex, part of our strategy for a delightful end-to-end development experience relies on the simplification and standarization of mechanisms for API integration, via serverless functions through industry compliant patterns and via our super efficient devkits.
 
 And that includes a concern that has historically been a challenge for frontend developers: the integration with databases and data storage. Azure Static Web Apps is unique in that it integrates very well with our CosmosDB database, a versatile cloud database that offers different API's to meet different developer skills and server a myriad of use cases in a very effective way.
 
-### Security and performance enhanced travels, via e2e testing and debugging
+### Security & Performance: E2E testing + debugging
 
 And when we go to the service station, it may be a good time to check our oil levels, air pressure and wipe our window panes. And what a better way to do it than with tools from the same developer ecosystem and that play right (yes, you got me! I'm playing with words now!) like [Playwright](https://dev.to/azure/16-test-automation-with-playwright-odk) and Edge Developer Tools. 
 
 So now when you use the newly release Preview environments, to test development from a specific staging branch, you will have also the ability to integrate with best-in-class tooling, iteration after iteration, until feature complete.
 
-## The ultimate end-to-end roadmap should _map_ to the development cycle
+## Alignment: The ultimate e2e roadmap should _map_ to the development cycle
 
-Any of the aspects described above can describe an end-to-end experience in and out of themselves. If I want to secure my application againt unauthorized access, I will have to implement identity and that's an end-to-end experience. If I want to persist data, I will need to integrate with a database, and that's another end-to-end experience. To integrate with many services in an event based manner, I will probably need functions. The ultimate end-to-end experience, however, is that that encompasses all components described by a matrix of architecture definitions and best practices,  mapping to the software development cycle iteself.
+Any aspect on its own, can describe an end-to-end experience. For instance:
+ * If I want to secure my app against unauthorized access, I must implement identity. That's an E2E experience.
+ * If I want to persist data, I'll need to integrate with a database. An E2E experience.
+ * If I want to integrate third-party services on demand, I'll need event-driven functions. Another E2E experience.
+
+The ultimate end-to-end experience, however, is that that encompasses all components described by a matrix of architecture definitions and best practices,  mapping to the software development cycle itself.
 
 ![development roadmap equals cycle](../static/img/series/w4d1/SWAF5.png)
 
+
 When we are in the system design phase for our application, we will start thinking about what in research is known as "Jobs to be Done", and materialize them or _get them done_ , using tools or integrating with other products or services.
 
-So when I'm in the *setup* phase, the _job to be done_ will be very generic. "I need to build a _static web application_. What do I need?"
+ **Setup phase**.
+Job to be done will be generic - "I need to build a static web app. 
 
-_"I need to select a framework."_ 
-
-"What does the framework require?"
-
-_"It's a JavaScript framework that runs in the browser. It also compiles on top of a node runtime. I need a node environment and a node package manager to manage dependencies. My selected framework has its own CLI, so I also need it to optimize it and build it. I want to version it, so I need a version control tool. And to collaborate with my team, I need to host that code in a central, remote location (aka version control hosting). And because we want to build it remotely each time we integrate with a CI/CD pipeline, that includes a runner and some virtualization or emulation. And we want to publish it, so I need a hosting service. And..."_
+- What do I need? => I need a framework.
+- What does the framework require => It's a JS framework that runs in the browser, or in a Node.js runtime. I need a node environment and a node package manager to manage dependencies. 
+- Selected framework has its own CLI => I need it to optimize it and build it. 
+- I want to version it, so I need a version control tool. To collaborate, I need to host that code in a central, remote location (aka version control hosting). 
+- And because we want to build it remotely each time we integrate with a CI/CD pipeline, that includes a runner and some virtualization or emulation. - And we want to publish it, so I need a hosting service. 
+- And..."_
 
 And those are the _requirements_ that we start mapping to _setup and service capabilities_, so we can put together local and remote environments capable to fulfill them.
 
@@ -186,7 +189,7 @@ Static Web Apps is a modern, low configuration capability for Jamstack developme
 
 ## To wrap this up...
 
-Developer Experience is an end-to-end emprise that can be connected to the development, implementation and/or integration of a single feature or a group of them, from design, to execution, to testing, to release. 
+Developer Experience is an end-to-end exercise that can be connected to the development, implementation and/or integration of a single feature or a group of them, from design, to execution, to testing, to release. 
 
 In order for developers to have a *great* experience they enjoy, from one end to the other, they need to find:
 
