Added Twitter Card

--- a/www/blog/2021-05-23.md
+++ b/www/blog/2021-05-23.md
@@ -6,6 +6,18 @@ tags: [swa, 30days, best-practices]
 draft: false
 ---
 
+
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/practices-e2e" />
+  <meta name="twitter:title" content="#22: E2E Development & SWA" />
+  <meta name="twitter:description" content="Join @anfibiacreativa as we kick off 'Best Practices' week on #30DaysOfSWA with a discussion on End-to-End Developer Experiences for @AzureStatic Apps!" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/22-banner-c5cc6f06159eb61034c900af02756c3a.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/practices-e2e" />
+</head>
+
 Welcome to `Week 4, Day 1` of **#30DaysOfSWA**!! 
 
 This kickstarts our **"Best Practices"** week where we'll explore additional topics that help up deliver an enhanced or more optimal modern web application experience to our users. We'll start by looking at the End-to-End _developer experience (DX)_ - the importance of having a smooth and seamless DX to complement the UX (user experience), and best practices to improve your developer experience by architecting your applications and integrating services in more effective ways. Let's dive in!
