add(blog):custom vision outline

--- a/www/blog/2022-05-25.md
+++ b/www/blog/2022-05-25.md
@@ -1,22 +1,36 @@
 ---
 slug: practices-cognitive-services
 title: "#24: Custom Vision & SWA"
-authors: []
+authors: [yönet]
 tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
+<head>
+  <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/practices-cognitive-services" />
+  <meta name="twitter:title" content="#24: Custom Vision & SWA" />
+  <meta name="twitter:description" content="Join @AysSomething as we kick off 'Best Practices' week on #30DaysOfSWA with a discussion on adding AI capabilities to @AzureStatic Apps using Cognitive Services!" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/24-banner-.png" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@nitya" />
+  <meta name="twitter:site" content="@AzureStaticApps" /> 
+  <link rel="canonical" href="https://www.azurestaticwebapps.dev/blog/practices-cognitive-services" />
+</head>
 
 Welcome to `Week 4, Day 3` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+Yesterday we talked about adding search to a website using pre-trained Azure AI models. Today we'll explore how to customize models by using Custom Vision APIs.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
+ * What is Azure Custom Vision?
+ * What are the tools for training a Custom Vision AI model?
+ * Best practices for architecting your AI app with Responsible AI Principles?
+ * How to deploy your APIs and Static Web App(SWA)  
+ * **Exercise** [Build and deploy a SWA to analyse images](https://aka.ms/30DaysSWA/ImageAnalysis)
  * **Resource(s):** 
+
+    * [Azure Custom Vision Documentation](https://aka.ms/AzureCustomVision)
+    * [Learn Modules: Microsoft Azure AI Fundamentals: Explore computer vision](https://docs.microsoft.com/en-us/learn/paths/explore-computer-vision-microsoft-azure/?WT.mc_id=javascript-68057-ayyonet)
 
 ![](../static/img/series/banner.png)
