Week 4, Day 2 => Reviewed

--- a/www/blog/2022-05-24.md
+++ b/www/blog/2022-05-24.md
@@ -3,52 +3,64 @@ slug: practices-cognitive-search
 title: "#23: Cognitive Search & SWA"
 authors: [dina]
 tags: [swa, 30days, best-practices]
-draft: true 
+draft: false
 ---
 
 
 Welcome to `Week 4, Day 2` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about end-to-end developer experience. Today we'll explore adding search to a website.
-
+Yesterday, we kicked off "Best Practices" week by talking about the end-to-end developer experience. Key to this is the ability to seamlessly integrate relevant tools and services that enhance the user experience - without adding complexity to the developer workflow. Today, we'll look at this in practice, by walking through a tutorial that integrates your Azure Static Web Apps deployed website with **Azure Cognitive Search** - allowing you to add custom search capability to your deployed web app in just a few steps.
 
 ## What We'll Cover
  * What is Azure Cognitive Search?
- * What is a search index?
- * Add search to website
- * Deploy to SWA
- * **Exercise**: Upload data to search index. Then deploy sample to SWA.
+ * What is a Search Index?
+ * Add Cognitive Search to a Website
+ * Deploy to Azure Static Web Apps
+ * **Exercise**: Create your own search index. Deploy your app to SWA.
 
-![](../static/img/series/banner.png)
+![](../static/img/series/23-banner.png)
 
-Today we explore adding search to a website with Azure Cognitive Search. Azure Cognitive Search provides many capabilities for searching and even provides extensibility with provided or custom functionality.
 
-The [complete source code](https://github.com/Azure-Samples/azure-search-javascript-samples/blob/master/search-website/) is provided for you.
+## Make Your App Searchable!
+
+Today we explore adding search to a website with [Azure Cognitive Search](https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search) - a cloud search service that provides infrastructure, APIs, and tools, for building rich integrated search capabilities for your mobile and web applications. It even allows for custom search functionality to enhacne the default experience.
+
+We'll walk through the following example today. Want to follow along? You can [grab the source code](https://github.com/Azure-Samples/azure-search-javascript-samples/blob/master/search-website/) and explore it as we walk through the tutorial.
+
+We will be using a **Book Catalog** example - one of the most common uses of search for a website - to demonstrate how fast it is to get this service up and running with your deployed Azure Static Web App.
 
 ![Sample with Cognitive Search functionality](../static/img/series/w4d2/cognitive-search-enabled-book-website.png)
 
-This example of Cognitive Search shows the most common use of search for a website and demonstrates how fast it is to get up and running. This sample website provides access to a catalog of 10,000 books. A user can search the catalog by entering text in the search bar. While the user enters text, the website uses the Search Index's suggest feature to complete the text. Once the query finishes, the list of books is displayed with a portion of the details. A user can select a book to see all the details, stored in the Search Index, of the book.
+This sample website provides access to a catalog of 10,000 books. The user experience goes something like this:
+ * The user searches the catalog by entering text in the search bar. 
+ * As they enter text, we can use the Search Index's suggest feature to complete the text proactively. 
+ * Once the query finishes, we display the results with a subset of details. 
+ * Users select a book to see the details stored in the book's Search Index.
+
+Simple, right? Let's look under the hood at how this works, and then dive into the implementation details.
 
 ## What is Azure Cognitive Search?
 
-Azure Cognitive Search is a cloud search service that gives you, as the developer, the ability to provide rich search experiences. Architecturally, a search service sits between the external data stores that contain your unindexed data, and your client app that sends query requests to a search index and handles the response.
+[Azure Cognitive Search](https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search) is a cloud search service that gives you, as the developer, the ability to provide rich search experiences. Architecturally, a search service sits between the external data stores that contain your unindexed data, and your client app that sends query requests to a search index and handles the response.
 
 ![the roundtrip road of boring development](../static/img/series/w4d2/azure-search-diagram.svg)
 
-Cognitive Search can integrate with other Azure services that automate data ingestion/retrieval from Azure data sources, and skillsets that incorporate consumable AI from Cognitive Services, such as image and natural language processing, or custom AI that you create in Azure Machine Learning or wrap inside Azure Functions.
+Cognitive Search **can integrate with other Azure services** that automate data ingestion/retrieval from Azure data sources, and skillsets that incorporate consumable AI from Cognitive Services, such as image and natural language processing, or custom AI that you create in Azure Machine Learning or wrap inside Azure Functions.
 
-Once you create your Azure resource for Cognitive Search, you can access the service with the following vital information:
+Once you create your Azure resource for Cognitive Search, you can access it with the following key information:
 
-* Resource name: what you named your Cognitive Search instance.
-* Index name: your resource can hold several indexes, each identified with a name.
-* Admin key: used to upload data into the search index
-* Query key: used by the API to find data in the search index
+* **Resource name:** what you named your Cognitive Search instance.
+* **Index name:** your resource can hold many indexes, each with its own identifiable name.
+* **Admin key:** used to upload data into the search index
+* **Query key:** used by the API to find data in the search index
+
+So, we've used the term _search index_ many times - what does that mean?
 
 ## What is a search index?
 
-Search functionality needs data to query. In Azure Cognitive Search, this data is held in a _search index_. Because this sample is already written for you, that includes the upload of the JSON data into the search index. 
+Search functionality needs data to query. In Azure Cognitive Search, this data is held in a _search index_. Because this particular sample is already written for you, it includes the upload of the JSON data into the search index. If you're starting from scratch, look at the [Quickstart](https://docs.microsoft.com/en-us/azure/search/search-get-started-portal) to learn how you can create an Azure Cognitive Search index with **your** data.
 
-The trickiest part of this process is mapping your data into Cognitive Search types. In order to do this, you provide a [schema file](https://github.com/Azure-Samples/azure-search-javascript-samples/blob/master/search-website/bulk-insert/good-books-index.json) that describes each data field. 
+The trickiest part is mapping your data into Cognitive Search types. In order to do this, you provide a [schema file](https://github.com/Azure-Samples/azure-search-javascript-samples/blob/master/search-website/bulk-insert/good-books-index.json) that describes each data field. 
 
 
 ### Searchable title
@@ -183,3 +195,4 @@ This website provides basic search functionality for books. Go beyond the basics
 * [Fuzzy search](https://docs.microsoft.com/en-us/azure/search/search-query-fuzzy)
 * [Semantics](https://docs.microsoft.com/en-us/azure/search/semantic-ranking)
 
+This is just one of many samples provided in the [Azure for JavaScript Developers](https://docs.microsoft.com/en-us/azure/developer/javascript/how-to/create-static-web-app) page. Explore the Static Web Apps section and explore other Azure services you can integrated into your modern web app!
