--- a/www/blog/2022-05-24.md
+++ b/www/blog/2022-05-24.md
@@ -23,7 +23,7 @@ Yesterday, we kicked off "Best Practices" week by talking about the end-to-end d
 
 ## Make Your App Searchable!
 
-Today we explore adding search to a website with [Azure Cognitive Search](https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search) - a cloud search service that provides infrastructure, APIs, and tools, for building rich integrated search capabilities for your mobile and web applications. It even allows for custom search functionality to enhacne the default experience.
+Today we explore adding search to a website with [Azure Cognitive Search](https://docs.microsoft.com/en-us/azure/search/search-what-is-azure-search) - a cloud search service that provides infrastructure, APIs, and tools, for building rich integrated search capabilities for your mobile and web applications. It even allows for custom search functionality to enhance the default experience.
 
 We'll walk through the following example today. Want to follow along? You can [grab the source code](https://github.com/Azure-Samples/azure-search-javascript-samples/blob/master/search-website/) and explore it as we walk through the tutorial.
 
