--- a/www/blog/2022-05-26.md
+++ b/www/blog/2022-05-26.md
@@ -8,14 +8,13 @@ draft: true
 
 Welcome to `Week 4, Day 4` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+Yesterday we talked about Custom Vision Today we'll explore the KlipTok application built by Jeff Fritz and how it uses Azure Static Apps to deliver a Twitch clip search and indexing service.
 
 
 ## What We'll Cover
- * 
- * 
- * 
- * **Exercise** 
- * **Resource(s):** 
+ * What is KlipTok?
+ * Why did KlipTok choose Azure Static Apps?
+ * How does Azure Static Apps and Blazor work together?
+ * **Exercise**: Check out the KlipTok application and see how it works.
 
 ![](../static/img/series/banner.png)
