More content and screenshot added

--- a/www/blog/2022-05-26.md
+++ b/www/blog/2022-05-26.md
@@ -15,6 +15,25 @@ Yesterday we talked about Custom Vision Today we'll explore the KlipTok applicat
  * What is KlipTok?
  * Why did KlipTok choose Azure Static Apps?
  * How does Azure Static Apps and Blazor work together?
- * **Exercise**: Check out the KlipTok application and see how it works.
+ * **Exercise**: Check out the [KlipTok website](https://kliptok.com) and see it in action.
 
 ![](../static/img/series/banner.png)
+
+## KlipTok Makes Twitch Videos Searchable
+
+KlipTok is a website that I started building while streaming live on Twitch in November 2019.  At the time, I wanted to build a website that would allow folks to discover Twitch clips from their favorite creators in the same way that they navigate and interact with TikTok.
+
+![Screenshot of the KlipTok Website](../static/img/series/w4d3/kliptok-site.png)
+
+ Behind the scenes, KlipTok monitors Twitch for new clips from streamers that are signed up with the site and indexes them.  The clips are then transcribed and searchable on the site.  Visitors can view, like, and comment on clips.  Additionally, anyone can create playlists of clips to share with their friends.
+
+ ## KlipTok Chooses Azure Static Apps
+
+ To make the KlipTok application and help demonstrate Blazor running at scale in a large application, I chose Azure Static Apps.  This allows the application to scale the HTTP services to deliver content into the browser while delivering a high-performance experience with the Blazor application running in the browser on top of WebAssembly. 
+
+ KlipTok also operates a second Azure Function service called the 'BackOffice' that performs the synchronization of Twitch clips and other data aggregation tasks.  When new channels are added to KlipTok for monitoring, the BackOffice service is triggered with a message on Azure Service Bus to add the channel and begin processing their clips for the index.
+
+ We have a small problem with Blazor Web Assembly and Azure Static Websites because the search engines and social media sites do not know how to crawl and present web assembly generated content.  To solve this, I added Azure Frontdoor to the site with an Azure App Service we ironically call the 'Static Site'.
+
+ -> DIAGRAM <-  
+
